<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/operand_one"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/number_input_text"
            android:inputType="numberDecimal"
             />

        <EditText
            android:id="@+id/operand_two"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/number_input_text_two"
            android:inputType="numberDecimal" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_sign" />

            <RadioButton
                android:id="@+id/subtract_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_sign" />

            <RadioButton
                android:id="@+id/multiply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiply_sign" />

            <RadioButton
                android:id="@+id/divide_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide_sign" />

            <RadioButton
                android:id="@+id/modulus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modulus_sign" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/calculate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate_button"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/result_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = ""
                android:paddingTop="10dp"
                android:textSize="30sp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>